[tool.poetry]
name = "plants"
version = "0.1.0"
description = ""
authors = ["Felipe Carlos <efelipecarlos@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "plants"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "<=2.2.3"
flask-iiif = "^1.0.0"
flask-cors = "^4.0.0"
flask-sqlalchemy = "^2.5.1"
psycopg2 = "^2.9.9"
gunicorn = "^21.2.0"
dynaconf = "^3.2.4"
flask-restful = "^0.3.10"
flask-alembic = "^2.0.1"
werkzeug = "^2.2.3"
sqlalchemy = "^1.4.51"
sqlalchemy-utils = "^0.38.3"
marshmallow-sqlalchemy = "^0.28.2"
flask-marshmallow = "^0.14.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"
pre-commit = "^3.6.0"
pytest = "^7.4.4"
faker = "^23.1.0"

[tool.poetry.scripts]
black = "black:patched_main"

[tool.isort]
profile = "black"
line_length = 88
skip_glob = [ "docs", "notes" ]

[tool.ruff]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "I",   # isort
  "N",   # pep8 naming
  "PL",  # pylint
]

[tool.ruff.lint.pylint]
max-args = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
